--- a/admin_cemter/admin.html
+++ b/admin_cemter/admin.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administración - Revista Cienciometrik</title>
     <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="sidebar.css">
+    
+    <!-- Links a estilos visuales de objetos en los botones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
