--- a/contactanos.html
+++ b/contactanos.html
@@ -28,13 +28,48 @@
                 <div class="contact-hero-content">
                     <i class= "fas fa fa-phone-alt"></i>
                     <h2>¡Hablemos de Ciencia!</h2>
-                    <p class="subtitle">¿Tienes una pregunta, una idea brillante o simplemente quieres saludar? ¡Estamos listos para conectar contigo!</p>
+                    <p class="subtitle">¿Tienes una pregunta, una idea brillante o simplemente quieres saludar? <br>¡Estamos listos para conectar contigo!</p>
                 </div>
             </section>
 
-            <section class="section contact-form-section">
+            <section class="section contact-info-section">
+                <h2>Contáctanos</h2>
+                <p>Puedes encontrarnos aquí:</p>
+                <div class="contact-details">
+                    <div class="contact-item">
+                        <i class="fas fa-envelope-open-text icon-large"></i>
+                        <h3>Correo Electrónico</h3>
+                        <p><a href="mailto:revista.cienciometrik@sena.edu.co">hsemanate@sena.edu.co</a></p>
+                        <p>¡Esperamos tu email!</p>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone-alt icon-large"></i>
+                        <h3>Teléfono</h3>
+                        <p>Hugo Alexander Semanate (Instructor Sennova. Líder Semillero de Investigación ICI)</p>
+                        <p><a href="tel:+573125271993">+57 312-5271993</a></p>
+                        <p>Llámanos en horario de oficina.</p>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt icon-large"></i>
+                        <h3>Nuestra Ubicación</h3>
+                            <p><a href="https://maps.app.goo.gl/9CVLQCo7UeGHEfKa9">Google Maps</a></p>
+                        <p>Calle 51 No. 57-70. Torre Sur. Piso 4. Medellín, Antioquia, Colombia.</p>
+                    </div>
+                </div>
+                <div class="social-media">
+                    <h3>¡Síguenos en redes!</h3>
+                    <p>Mantente al tanto de nuestras últimas publicaciones y novedades:</p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/profile.php?id=61576106693485" class="social-icon-link"><i class="facebook">F</i></a>
+                        <a href="https://www.linkedin.com/in/revista-cienciometrik-b7a5ab363/" class="social-icon-link"><i class="linkedin">L</i></a>
+                        <a href="https://www.instagram.com/revistacienciometrik/" class="social-icon-link"><i class="instagram">iG</i></a>
+                    </div>
+                </div>
+            </section>
+
+                        <section class="section contact-form-section">
                 <h2>Envíanos tu mensaje</h2>
-                <p>Completa este formulario y nos pondremos en contacto contigo lo antes posible. ¡Tu opinión y tus ideas son valiosas para nosotros!</p>
+                <p>Completa este formulario y nos pondremos en contacto contigo lo antes posible. <br> ¡Tu opinión y tus ideas son valiosas para nosotros!</p>
                 <form id="formulario-contacto" class="modern-form">
                     <div class="form-group">
                         <label for="nombre"><i class="fas fa-user icon"></i> Tu Nombre:</label>
@@ -69,43 +104,10 @@
                 </form>
                 <div id="mensaje-contacto" class="mensaje"></div>
             </section>
-
-            <section class="section contact-info-section">
-                <h2>¿Prefieres otros medios?</h2>
-                <p>También puedes encontrarnos aquí:</p>
-                <div class="contact-details">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope-open-text icon-large"></i>
-                        <h3>Correo Electrónico</h3>
-                        <p><a href="mailto:revista.cienciometrik@sena.edu.co">revista.cienciometrik@sena.edu.co</a></p>
-                        <p>¡Esperamos tu email!</p>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone-alt icon-large"></i>
-                        <h3>Teléfono</h3>
-                        <p><a href="tel:+5741234567">+57 (4) 123 4567</a></p>
-                        <p>Llámanos en horario de oficina.</p>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt icon-large"></i>
-                        <h3>Nuestra Ubicación</h3>
-                        <p>Centro de Comercio, Regional Antioquia, SENA</p>
-                        <p>Medellín, Colombia</p>
-                    </div>
-                </div>
-                <div class="social-media">
-                    <h3>¡Síguenos en redes!</h3>
-                    <p>Mantente al tanto de nuestras últimas publicaciones y novedades:</p>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon-link"><i class="facebook">F</i></a>
-                        <a href="#" class="social-icon-link"><i class="twitter">T</i></a>
-                        <a href="#" class="social-icon-link"><i class="linkedin">L</i></a>
-                        <a href="#" class="social-icon-link"><i class="instagram">iG</i></a>
-                    </div>
-                </div>
-            </section>
         </main>
     </div>
+
+    
 
     <mi-footer></mi-footer>
 
