--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section id="inicio" class="section">
     <div class="main-content-banner">
         <div class="image-wrapper right-image">
-            <img src="images/PNG-Cienciometrik/cienciometrik.png" id="img_moving" class="animated-image-banner">
+            <img src="images/IMG-MOV-INDX.png" id="img_moving" class="animated-image-banner">
         </div>
         <div class="image-wrapper left-image">
             <img src="images/Portada.png" id="portada_imagen" alt="Imagen de portada de la revista" class="main-image-banner">
