--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -30,12 +30,12 @@
             <section class="section contact-hero">
                 <div class="contact-hero-content">
                     <i class= "fas fa fa-lightbulb contact-icon"></i>
-                    <h2>¡Quienes somos!</h2>
+                    <h2>¿Quiénes somos?</h2>
                 </div>
             </section>
 
              <section id="quienes-somos" class="section">
-                 <h2>¿Quiénes Somos?</h2>
+                 <h2>¿Quiénes somos?</h2>
                  <p>
                      La <strong>Revista Cienciometrik</strong> es una publicación semestral del Servicio Nacional de Aprendizaje SENA,
                      adscrita al Sistema de Investigación, Desarrollo Tecnológico e Innovación SENNOVA. Específicamente, nace del
@@ -50,21 +50,17 @@
                  </p>
                  <br>
                  <h3 id="nuestro-equipo">Nuestro Equipo (Créditos):</h3>
-                 <ul>
-                     <li><strong>Subdirector (e), Centro de Comercio, Regional Antioquia:</strong> Oswaldo De Jesús Monroy Urrego</li>
-                     <li><strong>Editor Revista Cienciometrik:</strong> Hugo Alexander Semanate Quiñonez (Instructor Sennova.
-                         Líder Semillero de Investigación ICI)</li>
-                     <li><strong>Coeditora Revista Cienciometrik:</strong> Laura Marcela Gaviria Yepes (Dinamizadora SENNOVA)</li>
-                     <li><strong>Monitores Semillero de Investigación ICI (Investiga, Crea, Innova):</strong>
-                         <ul>
-                             <li>Wilson Rivera Del Castillo (Aprendiz Tecnólogo Desarrollo Publicitario)</li>
-                             <li>Marcela Restrepo Lozano (Aprendiz Tecnólogo Desarrollo Publicitario)</li>
-                             <li>Johans Sánchez Murillo</li>
-                             <li>Misael Escorcia Bolaño (Aprendiz Tecnólogo Desarrollo Publicitario)</li>
-                             <li>Nidia Cristina Monrroy (Aprendiz Tecnólogo Desarrollo Publicitario)</li>
-                         </ul>
-                     </li>
-                 </ul>
+                    <ul>
+                        <li><strong>Subdirector (e), Centro de Comercio, Regional Antioquia:</strong> Oswaldo De Jesús Monroy Urrego</li>
+                        <li><strong>Editor Revista Cienciometrik:</strong> Hugo Alexander Semanate Quiñonez <br> (Instructor Sennova. Líder Semillero de Investigación ICI. Centro de Comercio, Regional Antioquia)</li>
+                        <li><strong>Monitores Semillero de Investigación ICI (Investiga, Crea, Innova):</strong>
+                            <ul>
+                                <li>Wilson Rivera Del Castillo (Aprendiz Tecnólogo Desarrollo Publicitario. Centro de Comercio, Regional Antioquia)</li>
+                                <li>Misael Escorcia Bolaño (Aprendiz Tecnólogo Desarrollo Publicitario. Centro de Comercio, Regional Antioquia)</li>
+                                <li>Nidia Cristina Monrroy (Aprendiz Tecnólogo Desarrollo Publicitario. Centro de Comercio, Regional Antioquia)</li>
+                            </ul>
+                        </li>
+                    </ul>
                  <br>
                  <h3 id="informacion-revista">Información de la Revista:</h3>
                  <p>
@@ -73,31 +69,12 @@
                      <strong>Entidad Editora:</strong> Servicio Nacional de Aprendizaje SENA. Centro de Comercio.<br>
                      <strong>Dirección:</strong> Calle 51 No. 57-70. Torre Sur. Piso 4. Medellín, Antioquia, Colombia.<br>
                      <strong>ISSN:</strong> 2981-5533
-                 </p>
-                 <br>
-                 <h3 id="nuestro-enfoque">Nuestro Enfoque:</h3>
-                 <p>
-                     La Revista Cienciometrik se enfoca en la difusión de investigaciones, desarrollos tecnológicos e innovaciones en
-                     diversas áreas del conocimiento, con un interés particular en la cienciometría como herramienta para el análisis
-                     y la mejora de la investigación.
-                 </p>
-                 <p>
-                     Recibimos trabajos en las siguientes líneas (ejemplos basados en los documentos):
-                 </p>
-                 <ul>
-                     <li>Cienciometría y estudios métricos de la información.</li>
-                     <li>Investigación pedagógica.</li>
-                     <li>Desarrollo de habilidades blandas y competencias socioemocionales.</li>
-                     <li>Gestión de la producción y optimización de procesos industriales.</li>
-                     <li>Innovación y desarrollo tecnológico aplicado.</li>
-                     <li>Economía verde, territorio y sustentabilidad.</li>
-                     <li>Administración, comercio y servicios.</li>
-                 </ul>
+                 </p>                 
                  <br>
                  <h3 id="invitacion-sennova">Invitación a la Comunidad SENNOVA:</h3>
                  <p>
                      Invitamos a aprendices, instructores e investigadores del Sistema SENNOVA a ser parte de Cienciometrik,
-                     compartiendo sus valiosos aportes al conocimiento científico y tecnológico.
+                     compartiendo sus valiosos aportes al conocimiento científico y tecnológico. Puedes hacerlo en el siguiente enlace: <a href="/autores.html"> - Postear artículo - </a>
                  </p>
              </section>
 
