--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autores - Revista Cienciometrik</title>
     <link rel="stylesheet" href="autor_panel.css">
+    <link rel="stylesheet" href="sidebar.css">
 </head>
 <body>
     <mi-header></mi-header>
@@ -37,7 +38,7 @@
                 <p>Completa este formulario para enviar tu artículo a revisión.</p>
                 <form id="submission-form" class="modern-form">
                     <div class="form-group">
-                        <label for="tituloArticulo"><i class="fas fa-heading icon"></i> Título del Artículo:</label>
+                        <label for="tituloArticulo"><i class="fas fa-heading icon"></i> Título del Artículo: (Máximo 25 palabras)</label>
                         <input type="text" id="tituloArticulo" required>
                     </div>
                     <div class="form-group">
@@ -49,14 +50,23 @@
                         <input type="email" id="autorEmail" required>
                     </div>
                     <div class="form-group">
-                        <label for="contenidoArticulo"><i class="fas fa-file-alt icon"></i> Contenido del Artículo:</label>
+                        <label for="contenidoArticulo"><i class="fas fa-file-alt icon"></i> Contenido del Artículo: (Con palabras clave, resumen, nombre completo de autor(es) y referencias)</label>
                         <textarea id="contenidoArticulo" rows="15" required placeholder="Pega o escribe aquí el contenido completo de tu artículo..."></textarea>
                     </div>
                     <div class="form-group">
                         <label for="observaciones"><i class="fas fa-comment-alt icon"></i> Observaciones Adicionales (opcional):</label>
                         <textarea id="observaciones" rows="5" placeholder="Cualquier nota, aclaración o mensaje para los revisores..."></textarea>
                     </div>
+                    <br>
+                    <button type="submit" class="submit-button"><i class="fas fa-upload"></i> PDF Upload </button>
+                    <p>Sube tu PDF aquí.</p>
+                    <br>
+                    <button type="submit" class="submit-button"><i class="fas fa-upload"></i> Documentación </button>
+                    <p>Visita este enlace para verificar la documentación necesaria para postear articulos en la revista.</p>
+                    <div id="mensaje-envio" class="mensaje"></div>
+                    <br>
                     <button type="submit" class="submit-button"><i class="fas fa-upload"></i> Enviar Artículo</button>
+                    <p>¡Envíanos tu artículo y pronto recibirás una respuesta! </p>
                     <div id="mensaje-envio" class="mensaje"></div>
                 </form>
             </section>
@@ -65,7 +75,7 @@
                 <h2><i class="fas fa-file-alt"></i> Mis Artículos Enviados</h2>
                 <p>Consulta el estado de tus artículos y las revisiones.</p>
                 <div class="search-bar">
-                    <label for="search-autor-email"><i class="fas fa-envelope icon"></i> Ingresa tu Correo Electrónico para ver tus artículos:</label>
+                    <label for="search-autor-email"><i class="fas fa-envelope icon"></i>Ingresa tu correo electrónico y haz clic en "Buscar Mis Artículos" para verlos aquí.</label>
                     <input type="email" id="search-autor-email" placeholder="tu_correo@example.com" required>
                     <button id="btn-buscar-articulos" class="submit-button small-button">
                         <i class="fas fa-search"></i> Buscar Mis Artículos
@@ -75,7 +85,7 @@
                     </button>
                 </div>
                 <div id="lista-mis-articulos" class="articles-list">
-                    <p class="loading-message">Ingresa tu correo electrónico y haz clic en "Buscar Mis Artículos" para verlos aquí.</p>
+                    <p class="loading-message"></p>
                 </div>
                 <div id="mensaje-mis-articulos" class="mensaje"></div>
             </section>
@@ -105,14 +115,14 @@
                 <h2><i class="fas fa-trash-restore"></i> Mis Artículos Eliminados</h2>
                 <p>Aquí puedes ver los artículos que has marcado como eliminados y solicitar su recuperación.</p>
                 <div class="search-bar">
-                    <label for="search-deleted-email"><i class="fas fa-envelope icon"></i> Ingresa tu Correo Electrónico para ver tus artículos eliminados:</label>
+                    <label for="search-deleted-email"><i class="fas fa-envelope icon"></i> Ingresa tu correo electrónico y haz clic en "Buscar Eliminados" para ver tus artículos ocultos aquí.</label>
                     <input type="email" id="search-deleted-email" placeholder="tu_correo@example.com" required>
                     <button id="btn-buscar-eliminados" class="submit-button small-button">
                         <i class="fas fa-search"></i> Buscar Eliminados
                     </button>
                 </div>
                 <div id="lista-articulos-eliminados" class="articles-list">
-                    <p class="loading-message">Ingresa tu correo electrónico y haz clic en "Buscar Eliminados" para ver tus artículos ocultos aquí.</p>
+                    <p class="loading-message"></p>
                 </div>
                 <div id="mensaje-articulos-eliminados" class="mensaje"></div>
             </section>
