--- a/admin_cemter/revisor.html
+++ b/admin_cemter/revisor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revisor - Revista Cienciometrik</title>
     <link rel="stylesheet" href="revisor.css"> 
+    <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
