--- a/publicaciones.html
+++ b/publicaciones.html
@@ -1,3 +1,12 @@
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5VR5VJMP');</script>
+<!-- End Google Tag Manager -->
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,6 +16,12 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5VR5VJMP"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
     <mi-header></mi-header>
 
     <div class="container">
@@ -30,12 +45,17 @@
 
             <section class="section contact-hero">
                 <div class="contact-hero-content">
-                    <i class="fas fa-paper-plane contact-icon"></i>
                     <h2>¡Nuestras ediciones!</h2>
                 </div>
             </section>
 
-    <section id="volumenes" class="section">
+            <section class="soon">  
+                <div class="contact-hero-content">
+                    <p>hola</p>
+                </div>
+            </section>
+    
+            <section id="volumenes" class="section">
     <h2>Publicaciones de la Revista</h2>
     <div class="volumenes-container">
 
@@ -46,27 +66,38 @@
             <p class="revista-volumen">Volumen 1, Número 1-3</p>
                 </div>
 
-            <h3>Vol. 2 N°. 3 (Julio - Diciembre 2024)</h3>
             <p>Este volumen incluye artículos de investigación y ponencias del 1er Simposio Nacional de Cienciometría.</p>
             <div class="descarga-info">
-                <a href="Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" target="_blank">Descargar PDF</a>
+                <a href="Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" target="_blank" data-volume-id="volumen-2-3">Descargar PDF</a>
                 <p>ISSN: 2981-5533</p>
+                <p>Descargas: <span id="downloads-volumen-2-3" class="download-count">0</span></p>
+            </div>
+                <br>
+            <h3>Repositorio del volúmen - Sena</h3>
+            <p>Aquí podrás descargar el primer volúmen directamente del repositorio del SENA.</p>
+            <div class="descarga-info">
+                <a href="https://repositorio.sena.edu.co/handle/11404/8135?locale-attribute=es" target="_blank" data-volume-id="volumen-2-3">Volúmen 1</a>
             </div>
         </div>
 
         <div class="volumen">
-            <!-- iMAGEN DE PORTADA PARA CADA VOLÚMEN -->
             <div class="revista-portada">
-            <img src="images/Revista CienciometriK_Vol. 2 N°. 3 2024.png" alt="Imagen de la revista" class="revista-imagen">
+            <img src="images/REVISTA CIENCIOMETRIK_VOLUMEN 2 N° 2 - ENERO - JUNIO - 2024.png" alt="Imagen de la revista" class="revista-imagen">
             <h1 class="revista-nombre">Cienciometrik</h1>
-            <p class="revista-volumen">Volumen 2, Número 3, diciembre de 2024</p>
+            <p class="revista-volumen">Volumen 2, Número 2, diciembre de 2024</p>
                 </div>
 
-            <h3>Vol. 2 N°. 2 (Enero - Junio 2024)</h3>
             <p>Este volumen contiene artículos sobre tecnologías e inteligencia artificial, mipymes, economía circular, inclusión y más.</p>
             <div class="descarga-info">
-                <a href="Docs/REVISTA CIENCIOMETRIK_VOLUMEN 2 N° 2 - ENERO - JUNIO - 2024.pdf" target="_blank">Descargar PDF</a>
+                <a href="Docs//REVISTA CIENCIOMETRIK_VOLUMEN 2 N° 2 - ENERO - JUNIO - 2024.pdf" target="_blank" data-volume-id="volumen-2-2">Descargar PDF</a>
                 <p>ISSN: 2981-5533</p>
+                <p>Descargas: <span id="downloads-volumen-2-2" class="download-count">0</span></p>
+            </div>
+                            <br>
+            <h3>Repositorio del volúmen - Sena</h3>
+            <p>Aquí podrás descargar el segundo volúmen directamente del repositorio del SENA.</p>
+            <div class="descarga-info">
+                <a href="https://repositorio.sena.edu.co/handle/11404/8483" target="_blank" data-volume-id="volumen-2-3">Volúmen 2</a>
             </div>
         </div>
 
@@ -77,11 +108,18 @@
             <p class="revista-volumen">Volumen 2, Número 3, diciembre de 2024</p>
                 </div>
 
-            <h3>Vol. 1 N°. 1 (Julio - Diciembre 2023)</h3>
+                <br>
             <p>El primer volumen de la revista con artículos de investigación y resultados del semillero ICI.</p>
             <div class="descarga-info">
-                <a href="Docs/Revista_CienciometriK_1_1-3.pdf" target="_blank">Descargar PDF</a>
+                <a href="Docs/Revista_CienciometriK_1_1-3.pdf" target="_blank" data-volume-id="volumen-1-1">Descargar PDF</a>
                 <p>ISSN: 2981-5533</p>
+                <p>Descargas: <span id="downloads-volumen-1-1" class="download-count">0</span></p>
+            </div>
+                                        <br>
+            <h3>Repositorio del volúmen - Sena</h3>
+            <p>Aquí podrás descargar el tercer volúmen directamente del repositorio del SENA.</p>
+            <div class="descarga-info">
+                <a href="https://repositorio.sena.edu.co/handle/11404/8643" target="_blank" data-volume-id="volumen3">Volúmen 3</a>
             </div>
         </div>
 
@@ -97,5 +135,6 @@
     <script src="Objects/container.js"></script>
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
+    <script src="Objects/download_tracker.js"></script>
 </body>
 </html>
