--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -58,13 +58,20 @@
                         <textarea id="observaciones" rows="5" placeholder="Cualquier nota, aclaración o mensaje para los revisores..."></textarea>
                     </div>
                     <br>
-                    <button type="submit" class="submit-button"><i class="fas fa-upload"></i> PDF Upload </button>
+                    <a href="https://drive.google.com/drive/folders/1CWcmaeNfji335XACO76MLwtonVAImtfZ?usp=drive_link" target="_blank" class="submit-button">
+                    <i class="fas fa-upload"></i> PDF Upload
+                    </a>
                     <p>Sube tu PDF aquí.</p>
                     <br>
-                    <button type="submit" class="submit-button"><i class="fas fa-upload"></i> Documentación </button>
+
+                    <a href="https://drive.google.com/drive/folders/1GFmLC1g07gxpe4XkZzHOjzpta4wyPdgr?usp=drive_link" target="_blank" class="submit-button">
+                        <i class="fas fa-upload"></i> Documentación
+                    </a>                    
                     <p>Visita este enlace para verificar la documentación necesaria para postear articulos en la revista.</p>
+                    
                     <div id="mensaje-envio" class="mensaje"></div>
                     <br>
+
                     <button type="submit" class="submit-button"><i class="fas fa-upload"></i> Enviar Artículo</button>
                     <p>¡Envíanos tu artículo y pronto recibirás una respuesta! </p>
                     <div id="mensaje-envio" class="mensaje"></div>
