--- a/autores.html
+++ b/autores.html
@@ -39,13 +39,14 @@
                 <div class="content-with-image">
                     <div class="text-content">
                         <p>Invitamos a aprendices, instructores e investigadores a contribuir con sus trabajos a la Revista Cienciometrik.</p>
-                        <h3>Plantillas:</h3>
+                        <h3>Documentación:</h3>
                         <ul>
-                            <li><a href="#">Plantilla para enviar Resúmenes Ampliados (Descargar .docx)</a></li>
-                            <li><a href="#">Plantilla para enviar Informes de Vigilancia Tecnológica (Descargar .docx)</a></li>
-                            <li><a href="#">Plantilla para enviar Pósters (Descargar .pptx)</a></li>
+                    <a href="https://drive.google.com/drive/u/3/folders/1GFmLC1g07gxpe4XkZzHOjzpta4wyPdgr" target="_blank" class="submit-button">
+                        <i class="fas fa-upload"></i> Documentación
+                    </a>                    
+                    <p>Visita este enlace para verificar la documentación necesaria para postear articulos en la revista.</p>
                         </ul>
-                        <br><br>
+                        <br>
                         <h3>¡Visita tu sitio web para Autores!</h3>
                         <br>
                         <p>¡Si tienes ideas de postulaciones para Cienciométrik, ingresa a la web Autores, escribe tu artículo, espera la respuesta del área de revisión y verás tu artículo en la Revista Cienciometrik!</p>
