--- a/publicaciones.html
+++ b/publicaciones.html
@@ -30,13 +30,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <nav>
                 <ul>
                     <li>
-                        <a href="#inicio">Inicio</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="Proximos_Volumenes">Próximos Volúmenes</a>
+                        <a href="#Nuestras_ediciones">Próximamente</a>
+                        
                     </li>
-                     <li><a href="#quienes-somos">Quiénes somos</a></li>
-                     <li><a href="#nuestro-equipo">Nuestro Equipo</a></li>
-                     <li><a href="#informacion-revista">Información de la Revista</a></li>
-                     <li><a href="#nuestro-enfoque">Nuestro Enfoque</a></li>
-                     <li><a href="#invitacion-sennova">Invitación SENNOVA</a></li>
+
                 </ul>
             </nav>
         </aside>
@@ -45,15 +44,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <section class="section contact-hero">
                 <div class="contact-hero-content">
-                    <h2>¡Nuestras ediciones!</h2>
+                    <h2 id="Nuestras_ediciones">¡Nuestras ediciones!</h2>
                 </div>
             </section>
 
-            <section class="soon">  
-                <div class="contact-hero-content">
-                    <p>hola</p>
-                </div>
-            </section>
+    <div class="image-container">
+        <img src="images/soon.jpeg" alt="Próximamente-img" class="soon-image">
+    </div>
     
             <section id="volumenes" class="section">
     <h2>Publicaciones de la Revista</h2>
@@ -76,7 +73,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Repositorio del volúmen - Sena</h3>
             <p>Aquí podrás descargar el primer volúmen directamente del repositorio del SENA.</p>
             <div class="descarga-info">
-                <a href="https://repositorio.sena.edu.co/handle/11404/8135?locale-attribute=es" target="_blank" data-volume-id="volumen-2-3">Volúmen 1</a>
+                <a href="https://repositorio.sena.edu.co/handle/11404/8135?locale-attribute=es" target="_blank" data-volume-id="sena-volumen-1">Volúmen 1</a>
+            <p>Descargas: <span id="downloads-sena-volumen-1" class="download-count">0</span></p>
             </div>
         </div>
 
@@ -97,7 +95,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Repositorio del volúmen - Sena</h3>
             <p>Aquí podrás descargar el segundo volúmen directamente del repositorio del SENA.</p>
             <div class="descarga-info">
-                <a href="https://repositorio.sena.edu.co/handle/11404/8483" target="_blank" data-volume-id="volumen-2-3">Volúmen 2</a>
+                <a href="https://repositorio.sena.edu.co/handle/11404/8483" target="_blank" data-volume-id="sena-volumen-2">Volúmen 2</a>
+            <p>Descargas: <span id="downloads-sena-volumen-2" class="download-count">0</span></p>
             </div>
         </div>
 
@@ -119,7 +118,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Repositorio del volúmen - Sena</h3>
             <p>Aquí podrás descargar el tercer volúmen directamente del repositorio del SENA.</p>
             <div class="descarga-info">
-                <a href="https://repositorio.sena.edu.co/handle/11404/8643" target="_blank" data-volume-id="volumen3">Volúmen 3</a>
+                <a href="https://repositorio.sena.edu.co/handle/11404/8643" target="_blank" data-volume-id="sena-volumen-3">Volúmen 3</a>
+            <p>Descargas: <span id="downloads-sena-volumen-3" class="download-count">0</span></p>
             </div>
         </div>
 
