--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <mi-header></mi-header>
+    <mi-header id="top"></mi-header>
 
     <div class="container">
         <aside class="sidebar" id="nav_panel">
@@ -22,6 +22,8 @@
                     <li><a href="#historia">Historia de la Revista</a></li>
                     <li><a href="#linea-tiempo">Línea de Tiempo</a></li>
                     <li><a href="#enfoque">Enfoque</a></li>
+                    <li><a href="#top"></i> Subir todo</a></li>
+                        <li><a href="#bottom"></i> Ir hasta abajo</a></li>
                 </ul>
             </nav>
         </aside>
@@ -99,7 +101,7 @@
         </main>
     </div>
 
-    <mi-footer></mi-footer>
+    <mi-footer id="bottom"></mi-footer>
 
     <script src="Objects/header.js"></script>
     <script src="Objects/container.js"></script>
