--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -8,7 +8,7 @@
  </head>
  <body>
 
-     <mi-header></mi-header>
+    <mi-header id="top"></mi-header>
 
      <div class="container">
          <aside class="sidebar">
@@ -21,6 +21,8 @@
                      <li><a href="#informacion-revista">Información de la Revista</a></li>
                      <li><a href="#nuestro-enfoque">Nuestro Enfoque</a></li>
                      <li><a href="#invitacion-sennova">Invitación SENNOVA</a></li>
+                     <li><a href="#top"> Subir todo</a></li>
+                        <li><a href="#bottom">Ir hasta abajo</a></li>
                  </ul>
              </nav>
          </aside>
@@ -82,7 +84,7 @@
 
      </div>
 
-     <mi-footer></mi-footer>
+     <mi-footer id="bottom"></mi-footer>
 
      <script src="Objects/header.js"></script>
      <script src="Objects/container.js"></script>
