--- a/autores.html
+++ b/autores.html
@@ -8,7 +8,7 @@
     </head>
 <body>
 
-    <mi-header></mi-header>
+    <mi-header id="top"></mi-header>
 
     <div class="container">
         <aside class="sidebar">
@@ -16,10 +16,10 @@
             <nav>
                 <ul>
                     <li><i class="fas fa-home"></i><a href="index.html">Inicio</a></li>
-                    <li><a href="quienes_somos.html">Quiénes Somos</a></li>
-                    <li><a href="publicaciones.html">Publicaciones</a></li>
-                    <li><a href="autores.html">Autores</a></li>
-                    <li><a href="contactanos.html">Contáctanos</a></li>
+                    <li><a href="#autores">¡Autores, escritories, literarios, todos!</a></li>
+                    <li><a href="#autores_login">Login</a></li>
+                    <li><a href="#top"> Subir todo</a></li>
+                    <li><a href="#bottom"> Ir hasta abajo</a></li>
                 </ul>
             </nav>
         </aside>
@@ -51,7 +51,7 @@
                         <br>
                         <p>¡Si tienes ideas de postulaciones para Cienciométrik, ingresa a la web Autores, escribe tu artículo, espera la respuesta del área de revisión y verás tu artículo en la Revista Cienciometrik!</p>
                         
-                        <a href="login/login.html" class="button calm-button">
+                        <a href="login/login.html" class="button calm-button" id="autores_login">
                             Autores Login
                         </a>
                         <br><br>
@@ -76,7 +76,7 @@
         </main>
     </div>
 
-    <mi-footer></mi-footer>
+    <mi-footer id="bottom"></mi-footer>
 
     <script src="Objects/header.js"></script>
     <script src="Objects/container.js"></script>
