panel por métriicas y ajustes
ok

--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -35,6 +35,7 @@
 
             <section id="enviar-articulo" class="section submit-article-section">
                 <h2><i class="fas fa-paper-plane"></i> Enviar Nuevo Artículo</h2>
+                <p>Recuerda que  artículo debe ser original, inédito y basado en información veraz, citando siempre todas las fuentes y autores adecuadamente para evitar el plagio. La contribución de cada autor debe ser significativa y transparente, garantizando así la integridad y calidad académica que nuestra revista promueve.</p>
                 <p>Completa este formulario para enviar tu artículo a revisión.</p>
                 <form id="submission-form" class="modern-form">
                     <div class="form-group">
@@ -64,16 +65,16 @@
                     <p>Sube tu PDF aquí.</p>
                     <br>
 
-                    <a href="https://drive.google.com/drive/folders/1GFmLC1g07gxpe4XkZzHOjzpta4wyPdgr?usp=drive_link" target="_blank" class="submit-button">
-                        <i class="fas fa-upload"></i> Documentación
+                    <a href="https://docs.google.com/document/d/1z_dtXeqZtzpCusfiq0vI74_tryxKOuQ8/edit?usp=drive_link&ouid=110401971620638453579&rtpof=true&sd=true" target="_blank" class="submit-button">
+                        <i class="fas fa-upload"></i> Plantilla Oficial
                     </a>                    
-                    <p>Visita este enlace para verificar la documentación necesaria para postear articulos en la revista.</p>
+                    <p>Visita este enlace para descargar la plantilla para documentar tu articulo en documento word.</p>
                     
                     <div id="mensaje-envio" class="mensaje"></div>
                     <br>
 
                     <button type="submit" class="submit-button"><i class="fas fa-upload"></i> Enviar Artículo</button>
-                    <p>¡Envíanos tu artículo y pronto recibirás una respuesta! </p>
+                    <p>¡Envíanos el texto de tu artículo para revisión! </p>
                     <div id="mensaje-envio" class="mensaje"></div>
                 </form>
             </section>
