--- a/autores.html
+++ b/autores.html
@@ -5,24 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autores</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/metricas.css">
     </head>
 <body>
 
     <mi-header id="top"></mi-header>
 
     <div class="container">
-        <aside class="sidebar">
-            <h3>Panel de Navegación</h3>
-            <nav>
-                <ul>
-                    <li><i class="fas fa-home"></i><a href="index.html">Inicio</a></li>
-                    <li><a href="#autores">¡Autores, escritories, literarios, todos!</a></li>
-                    <li><a href="#autores_login">Login</a></li>
-                    <li><a href="#top"> Subir todo</a></li>
-                    <li><a href="#bottom"> Ir hasta abajo</a></li>
-                </ul>
-            </nav>
-        </aside>
 
                 <main class="main-content">
             <section class="section contact-hero">
@@ -74,6 +63,8 @@
 
             </section>
         </main>
+
+    <metricas-panel></metricas-panel>     
     </div>
 
     <mi-footer id="bottom"></mi-footer>
@@ -82,6 +73,8 @@
     <script src="Objects/container.js"></script>
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
+    <script src="js/panelmetricas.js"></script> </body>
+    <script src="js/download_tracker.js"></script> </body>
 
 </body>
 </html>
