--- a/publicaciones.html
+++ b/publicaciones.html
@@ -14,6 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publicaciones</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/metricas.css">
 </head>
 <body>
 
@@ -25,20 +26,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <mi-header id="top"></mi-header>
 
     <div class="container">
-        <aside class="sidebar">
-            <h3>Panel de Navegación</h3>
-            <nav>
-                <ul>
-                    <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="#Nuestras_ediciones">Publicaciones de la Revista</a></li>
-                        <li><a href="#top"> Subir todo</a></li>
-                        <li><a href="#bottom"> Ir hasta abajo</a></li>
-                    </ul>
 
-                </ul>
-            </nav>
-        </aside>
 
 <main class="main-content">
 
@@ -52,7 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <img src="images/soon.jpeg" alt="Próximamente-img" class="soon-image">
     </div>
     
-            <section id="volumenes" class="section">
+<section id="volumenes" class="section">
     <h2>Publicaciones de la Revista</h2>
     <div class="volumenes-container">
 
@@ -126,8 +114,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </section>
 
+<section id="volumenes" class="section">
+    <h2>Cartillas digitales</h2>
+    <div class="volumenes-container">
+    </div>
+</section>
+
 </main>
+
+<metricas-panel></metricas-panel> 
 </div>
+
+        
 
     <mi-footer id="bottom"></mi-footer>
 
@@ -136,5 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
     <script src="Objects/download_tracker.js"></script>
+    <script src="js/panelmetricas.js"></script> </body>
+    <script src="js/download_tracker.js"></script> </body>
 </body>
 </html>
